# tdavec

./: .gitignore  README.md  old_readme.md  paper.md  pyproject.toml  reinstall  requirements.txt  setup.py
R/: Untitled.Rmd  compare.Rmd  ellipse_vs_circle.Rmd  epsList.csv
arXiv/: main.tex
notebook/: tdavec.ipynb
paper/: paper.bib  paper.md
paper_v2/: paper.md
python/: setup.py
python/tdavec/: TDAvectorizer.py  __init__.py
sample_notebook/: circle_vs_ellipse.ipynb  new_vectorizations.ipynb  tdavec.ipynb
src/: Makefile  README.md  pyproject.toml  setup.py
tdavec/: TDAvec.pyx  TDAvectorizer.py  __init__.py  tdavec_core.pyx  unit_test.py  vectorizer.py
