[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdavec"
version = "0.0.8"
authors = [
  {name = "Umar Islambekov", email = "iumar@bgsu.edu"},
  { name="Aleksei Luchinsky", email="aluchi@bgsu.edu" },
]
description = "TDAvect"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["tdavec/*"]

[project.urls]
Homepage = "https://github.com/ALuchinsky/example_package_Luchinsky"
Issues = "https://github.com/ALuchinsky/example_package_Luchinsky"